--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,11 @@
             "email": "gjavilae@gmail.com"
         }
     ],
-    "minimum-stability": "RC",
+    "repositories": {
+        "type": "git",
+        "url": "https://github.com/gjae/laravel-payment.git"
+    },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Classes\\" : "Classes/"
