--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "gjae/laravel-payment",
     "description": "A simple wrapper for laravel-payment",
     "type": "library",
+    "version": "0.1.0-dev",
     "require": {
         "laravel/framework": "~5.5",
         "laravel/tinker": "^1.0"
